Fixed imageComparator on mobile

--- a/web/public/src/css/elements/imageComparator.scss
+++ b/web/public/src/css/elements/imageComparator.scss
@@ -1,7 +1,7 @@
 .imageComparator {
-  width: 700px;
+  width: 100%;
   max-width: 700px;
-  min-height: 250px;
+  // min-height: 250px;
   display: block;
   margin: 0 auto;
   position: relative;
